# SmartPharmacySystem

./: README.md  main.cpp  pharmacySystem.cpp  pharmacySystem.h  pharmacy_data.txt
GUI_PharmacySystem/: CMakeLists.txt  billswindow.cpp  billswindow.h  fix_includes.bat  loginwindow.cpp  loginwindow.h  main.cpp  managerwindow.cpp  managerwindow.h  medicineswindow.cpp  medicineswindow.h  pharmacistwindow.cpp  pharmacistwindow.h  pharmacySystem.cpp  pharmacySystem.h  reportswindow.cpp  reportswindow.h  styles.qss
